
3.0  2012-06-14
  - Code name "Rainbow", this is a major release.
  - Added support for new HTTP status code.
  - Renamed Mojo::CookieJar to Mojo::UserAgent::CookieJar.
  - Improved message parser performance slightly.
  - Improved documentation. (ichesnokov, sri)
  - Improved tests.
  - Fixed JSON Pointer escaping.
  - Fixed small JSON Pointer bug in get command. (avkhozov)

2.98  2012-05-30
  - Switched from IO::Socket::IP to IO::Socket::INET6 for IPv6 support.
  - Improved IPv6 exception handling in Mojo::IOLoop::Client.
  - Improved documentation.
  - Improved tests.
  - Fixed array appending bug in Mojo::Parameters.

2.97  2012-05-28
  - Added workaround to make IO::Socket::SSL work with IO::Socket::IP.
  - Removed Bonjour support.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented Test::Mojo from working with normal Mojolicious
    applications that use Mojolicious::Plugin::Config.
  - Fixed a few small Unicode bugs in documentation.

2.96  2012-05-21
  - Added merge method to Mojo::Path.
  - Improved documentation.
  - Improved tests.
  - Fixed small memory leak in Mojolicious.
  - Fixed small bug that prevented already prepared IO::Socket::SSL handles to
    be used by Mojo::UserAgent.
  - Fixed small Mojo::URL and Mojo::Path stringification bugs.

2.95  2012-05-10
  - Improved documentation.
  - Fixed bug that caused inactivity timeouts to be logged too often.

2.94  2012-05-09
  - Added support for 308 redirects to Mojo::UserAgent.
  - Added support for new HTTP status codes.
  - Improved exception handling of all scripts.
  - Improved built-in web servers to log inactivity timeouts as debug messages
    instead of errors.
  - Improved documentation.
  - Fixed html_escape to always use entities with semicolon. (OlegG, crab)
  - Fixed typo in 414 status message.
  - Fixed small cookie formatting bug.
  - Fixed small bug in cookie parser.
  - Fixed small backlog bug in Mojo::Server::Daemon.

2.93  2012-05-05